gen/SailingParser.py
# Generated from C:/Users/g_sie/Desktop/InterpreterPolecenZeglarskichANTLR/grammar/SailingParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SailingParser ( Parser ):

    grammarFileName = "SailingParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'postaw'", "<INVALID>", "'refuj'", "'ustaw'", 
                     "'wybierz'", "'luzuj'", "'grot'", "'fok'", "<INVALID>", 
                     "'sztaksel'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'dobij'", "<INVALID>", "'szoty'", "<INVALID>", 
                     "'brasy'", "'talrepy'", "'pod wiatr'", "'z wiatrem'", 
                     "'ster'", "'prosto'", "'zwrot'", "'przez'", "'sztag'", 
                     "<INVALID>", "'odpadaj'", "'ostrzej'", "'ostry bejdewind'", 
                     "'baksztag'", "'bejdewind'", "<INVALID>", "'fordewind'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'cumuj'", "'odcumuj'", "'kurs'", 
                     "'namiar'", "'peleng'", "'pozycja'", "'na'", "'do'", 
                     "'punkt'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'stop'", "'wolny'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'sygnalizuj'", "'loguj'", "<INVALID>", "<INVALID>", 
                     "'zdarzenie'", "<INVALID>", "'stan jednostki'", "'wiatr'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'razy'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'czekaj'", "<INVALID>", 
                     "'niech'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'sekund'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'beaufort'", "'>='", "'<='", "'>'", "'<'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'.'", "';'", 
                     "','", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "POSTAW", "ZWIN", "REFUJ", "USTAW", "WYBIERZ", 
                      "LUZUJ", "GROT", "FOK", "BEZANMESANA", "SZTAKSEL", 
                      "WSZYSTKIE_ZAGLE", "ZAGLE_SZTORMOWE", "PELNE_ZAGLE", 
                      "ZAGLE", "DOBIJ", "NAPIN", "SZOTY", "FALY", "BRASY", 
                      "TALREPY", "POD_WIATR", "Z_WIATREM", "STER", "PROSTO", 
                      "ZWROT", "PRZEZ", "SZTAG", "RUFE", "ODPADAJ", "OSTRZEJ", 
                      "OSTRY_BEJDEWIND", "BAKSZTAG", "BEJDEWIND", "POLWIATR", 
                      "FORDEWIND", "POLBAKSZTAG", "LEWA_BURTA", "PRAWA_BURTA", 
                      "RZUC", "PODNIES", "KOTWICE", "CUMUJ", "ODCUMUJ", 
                      "KURS", "NAMIAR", "PELENG", "POZYCJA", "NA", "DO", 
                      "PUNKT", "POLNOC", "POLUDNIE", "WSCHOD", "ZACHOD", 
                      "POLNOCNY_WSCHOD", "POLNOCNY_ZACHOD", "POLUDNIOWY_WSCHOD", 
                      "POLUDNIOWY_ZACHOD", "WIOSLA", "WESLUJ", "CALA", "NAPRZOD", 
                      "STOP_KW", "WOLNY", "SREDNI", "WSTECZNY", "WODE", 
                      "FLAGA_KLUBOWA", "FLAGA_GOSCIA", "FLAGA_Q", "FLAGA_PROTESTOWA", 
                      "BANDERA", "PROPORCZYK", "FLAGE", "OPUSC", "SYGNALIZUJ", 
                      "LOGUJ", "POZYCJE", "POGODE", "ZDARZENIE", "RAPORT", 
                      "STAN_JEDNOSTKI", "WIATR", "PREDKOSC", "GLEBOKOSC", 
                      "POWTORZ", "RAZY", "JEZELI", "WTEDY", "INACZEJ", "CZEKAJ", 
                      "CZEKAJ_AZ", "NIECH", "AND", "OR", "NOT", "STOPNI", 
                      "PROCENT", "METROW", "WEZLOW", "MIL_MORSKICH", "SEKUND", 
                      "MINUT", "KABELTOW", "JARDOW", "BEAUFORT", "GTE", 
                      "LTE", "GT", "LT", "EQ", "PLUS", "MINUS", "STAR", 
                      "SLASH", "LPAREN", "RPAREN", "KROPKA", "SEMICOLON", 
                      "COMMA", "LBRACE", "RBRACE", "NUMBER", "STRING", "COORDINATE", 
                      "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_command = 1
    RULE_expression = 2
    RULE_stateRef = 3
    RULE_windField = 4
    RULE_assignment = 5
    RULE_sailCommand = 6
    RULE_sail = 7
    RULE_riggingCommand = 8
    RULE_riggingElement = 9
    RULE_rudderCommand = 10
    RULE_pointOfSail = 11
    RULE_boardSide = 12
    RULE_anchorCommand = 13
    RULE_mooringCommand = 14
    RULE_courseCommand = 15
    RULE_compassPoint = 16
    RULE_navigationCommand = 17
    RULE_speedCommand = 18
    RULE_flagCommand = 19
    RULE_flagSequence = 20
    RULE_logCommand = 21
    RULE_windCommand = 22
    RULE_weatherQuery = 23
    RULE_repeatCommand = 24
    RULE_waitCommand = 25
    RULE_duration = 26
    RULE_timeUnit = 27
    RULE_conditionCommand = 28
    RULE_condition = 29
    RULE_unit = 30

    ruleNames =  [ "program", "command", "expression", "stateRef", "windField", 
                   "assignment", "sailCommand", "sail", "riggingCommand", 
                   "riggingElement", "rudderCommand", "pointOfSail", "boardSide", 
                   "anchorCommand", "mooringCommand", "courseCommand", "compassPoint", 
                   "navigationCommand", "speedCommand", "flagCommand", "flagSequence", 
                   "logCommand", "windCommand", "weatherQuery", "repeatCommand", 
                   "waitCommand", "duration", "timeUnit", "conditionCommand", 
                   "condition", "unit" ]

    EOF = Token.EOF
    POSTAW=1
    ZWIN=2
    REFUJ=3
    USTAW=4
    WYBIERZ=5
    LUZUJ=6
    GROT=7
    FOK=8
    BEZANMESANA=9
    SZTAKSEL=10
    WSZYSTKIE_ZAGLE=11
    ZAGLE_SZTORMOWE=12
    PELNE_ZAGLE=13
    ZAGLE=14
    DOBIJ=15
    NAPIN=16
    SZOTY=17
    FALY=18
    BRASY=19
    TALREPY=20
    POD_WIATR=21
    Z_WIATREM=22
    STER=23
    PROSTO=24
    ZWROT=25
    PRZEZ=26
    SZTAG=27
    RUFE=28
    ODPADAJ=29
    OSTRZEJ=30
    OSTRY_BEJDEWIND=31
    BAKSZTAG=32
    BEJDEWIND=33
    POLWIATR=34
    FORDEWIND=35
    POLBAKSZTAG=36
    LEWA_BURTA=37
    PRAWA_BURTA=38
    RZUC=39
    PODNIES=40
    KOTWICE=41
    CUMUJ=42
    ODCUMUJ=43
    KURS=44
    NAMIAR=45
    PELENG=46
    POZYCJA=47
    NA=48
    DO=49
    PUNKT=50
    POLNOC=51
    POLUDNIE=52
    WSCHOD=53
    ZACHOD=54
    POLNOCNY_WSCHOD=55
    POLNOCNY_ZACHOD=56
    POLUDNIOWY_WSCHOD=57
    POLUDNIOWY_ZACHOD=58
    WIOSLA=59
    WESLUJ=60
    CALA=61
    NAPRZOD=62
    STOP_KW=63
    WOLNY=64
    SREDNI=65
    WSTECZNY=66
    WODE=67
    FLAGA_KLUBOWA=68
    FLAGA_GOSCIA=69
    FLAGA_Q=70
    FLAGA_PROTESTOWA=71
    BANDERA=72
    PROPORCZYK=73
    FLAGE=74
    OPUSC=75
    SYGNALIZUJ=76
    LOGUJ=77
    POZYCJE=78
    POGODE=79
    ZDARZENIE=80
    RAPORT=81
    STAN_JEDNOSTKI=82
    WIATR=83
    PREDKOSC=84
    GLEBOKOSC=85
    POWTORZ=86
    RAZY=87
    JEZELI=88
    WTEDY=89
    INACZEJ=90
    CZEKAJ=91
    CZEKAJ_AZ=92
    NIECH=93
    AND=94
    OR=95
    NOT=96
    STOPNI=97
    PROCENT=98
    METROW=99
    WEZLOW=100
    MIL_MORSKICH=101
    SEKUND=102
    MINUT=103
    KABELTOW=104
    JARDOW=105
    BEAUFORT=106
    GTE=107
    LTE=108
    GT=109
    LT=110
    EQ=111
    PLUS=112
    MINUS=113
    STAR=114
    SLASH=115
    LPAREN=116
    RPAREN=117
    KROPKA=118
    SEMICOLON=119
    COMMA=120
    LBRACE=121
    RBRACE=122
    NUMBER=123
    STRING=124
    COORDINATE=125
    IDENTIFIER=126
    WS=127
    LINE_COMMENT=128
    BLOCK_COMMENT=129

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SailingParser.EOF, 0)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailingParser.CommandContext)
            else:
                return self.getTypedRuleContext(SailingParser.CommandContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(SailingParser.SEMICOLON)
            else:
                return self.getToken(SailingParser.SEMICOLON, i)

        def getRuleIndex(self):
            return SailingParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SailingParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -7493711052094209922) != 0) or ((((_la - 75)) & ~0x3f) == 0 and ((1 << (_la - 75)) & 469319) != 0):
                self.state = 62
                self.command()
                self.state = 63
                self.match(SailingParser.SEMICOLON)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(SailingParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sailCommand(self):
            return self.getTypedRuleContext(SailingParser.SailCommandContext,0)


        def riggingCommand(self):
            return self.getTypedRuleContext(SailingParser.RiggingCommandContext,0)


        def rudderCommand(self):
            return self.getTypedRuleContext(SailingParser.RudderCommandContext,0)


        def anchorCommand(self):
            return self.getTypedRuleContext(SailingParser.AnchorCommandContext,0)


        def mooringCommand(self):
            return self.getTypedRuleContext(SailingParser.MooringCommandContext,0)


        def courseCommand(self):
            return self.getTypedRuleContext(SailingParser.CourseCommandContext,0)


        def navigationCommand(self):
            return self.getTypedRuleContext(SailingParser.NavigationCommandContext,0)


        def speedCommand(self):
            return self.getTypedRuleContext(SailingParser.SpeedCommandContext,0)


        def flagCommand(self):
            return self.getTypedRuleContext(SailingParser.FlagCommandContext,0)


        def logCommand(self):
            return self.getTypedRuleContext(SailingParser.LogCommandContext,0)


        def windCommand(self):
            return self.getTypedRuleContext(SailingParser.WindCommandContext,0)


        def weatherQuery(self):
            return self.getTypedRuleContext(SailingParser.WeatherQueryContext,0)


        def repeatCommand(self):
            return self.getTypedRuleContext(SailingParser.RepeatCommandContext,0)


        def conditionCommand(self):
            return self.getTypedRuleContext(SailingParser.ConditionCommandContext,0)


        def waitCommand(self):
            return self.getTypedRuleContext(SailingParser.WaitCommandContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SailingParser.AssignmentContext,0)


        def getRuleIndex(self):
            return SailingParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = SailingParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.sailCommand()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.riggingCommand()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.rudderCommand()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.anchorCommand()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.mooringCommand()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.courseCommand()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 78
                self.navigationCommand()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 79
                self.speedCommand()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 80
                self.flagCommand()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 81
                self.logCommand()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 82
                self.windCommand()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 83
                self.weatherQuery()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 84
                self.repeatCommand()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 85
                self.conditionCommand()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 86
                self.waitCommand()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 87
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SailingParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprVarContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(SailingParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprVar" ):
                listener.enterExprVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprVar" ):
                listener.exitExprVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprVar" ):
                return visitor.visitExprVar(self)
            else:
                return visitor.visitChildren(self)


    class ExprAddSubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailingParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SailingParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(SailingParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(SailingParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAddSub" ):
                listener.enterExprAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAddSub" ):
                listener.exitExprAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAddSub" ):
                return visitor.visitExprAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ExprParenContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(SailingParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(SailingParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(SailingParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprParen" ):
                listener.enterExprParen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprParen" ):
                listener.exitExprParen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprParen" ):
                return visitor.visitExprParen(self)
            else:
                return visitor.visitChildren(self)


    class ExprNumContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(SailingParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNum" ):
                listener.enterExprNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNum" ):
                listener.exitExprNum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNum" ):
                return visitor.visitExprNum(self)
            else:
                return visitor.visitChildren(self)


    class ExprMulDivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailingParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SailingParser.ExpressionContext,i)

        def STAR(self):
            return self.getToken(SailingParser.STAR, 0)
        def SLASH(self):
            return self.getToken(SailingParser.SLASH, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMulDiv" ):
                listener.enterExprMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMulDiv" ):
                listener.exitExprMulDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMulDiv" ):
                return visitor.visitExprMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class ExprStateContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stateRef(self):
            return self.getTypedRuleContext(SailingParser.StateRefContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprState" ):
                listener.enterExprState(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprState" ):
                listener.exitExprState(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprState" ):
                return visitor.visitExprState(self)
            else:
                return visitor.visitChildren(self)


    class ExprCompareContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SailingParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SailingParser.ExpressionContext,i)

        def GT(self):
            return self.getToken(SailingParser.GT, 0)
        def LT(self):
            return self.getToken(SailingParser.LT, 0)
        def GTE(self):
            return self.getToken(SailingParser.GTE, 0)
        def LTE(self):
            return self.getToken(SailingParser.LTE, 0)
        def EQ(self):
            return self.getToken(SailingParser.EQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprCompare" ):
                listener.enterExprCompare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprCompare" ):
                listener.exitExprCompare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprCompare" ):
                return visitor.visitExprCompare(self)
            else:
                return visitor.visitChildren(self)


    class ExprNotContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(SailingParser.NOT, 0)
        def expression(self):
            return self.getTypedRuleContext(SailingParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprNot" ):
                listener.enterExprNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprNot" ):
                listener.exitExprNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprNot" ):
                return visitor.visitExprNot(self)
            else:
                return visitor.visitChildren(self)


    class ExprLogicContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SailingParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)
